--- a/lang/en.json
+++ b/lang/en.json
@@ -26,8 +26,8 @@
     "WFRP4eEndeavours.Request": "GM has requested Endeavours",
     "WFRP4eEndeavours.Endeavour.Label": "Choose an endeavour: ",
     "WFRP4eEndeavours.Endeavour.Endeavour": "Endeavour",
-	"WFRP4eEndeavours.Endeavour.BAEndeavour": "Between Adventures Endeavours",
-	"WFRP4eEndeavours.Endeavour.TravelEndeavour": "Travel Endeavours",
+    "WFRP4eEndeavours.Endeavour.BAEndeavour": "Between Adventures Endeavours",
+    "WFRP4eEndeavours.Endeavour.TravelEndeavour": "Travel Endeavours",
     "WFRP4eEndeavours.Endeavour.Select": "Select",
     "WFRP4eEndeavours.Endeavour.None": "None",
     "WFRP4eEndeavours.Endeavour.Election": "I will do <b>{endeavour}",
@@ -110,14 +110,14 @@
     "WFRP4eEndeavours.Link.Reputation": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.N4EC4CCPZtX9i5qa]{Reputation}.",
     "WFRP4eEndeavours.Link.Research": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.2fjLtw5evY7LnjS0]{Research Lore}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.HZg1fkgEJW7AKrm2]{Research Lore}",
     "WFRP4eEndeavours.Link.Mark": "@UUID[JournalEntry.gLDW6JBuoYuzCoya.JournalEntryPage.7OPLj3XFgJvpj24D]{Study a Mark}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.w6bgiYK0m0tE9ra3]{Study a Mark}",
-    "WFRP4eEndeavours.Link.Woodcraft": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.ydgVG7wyZMi5rmEI]{Woodcraft}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
-    "WFRP4eEndeavours.Link.Forage": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.gOYxEWeCEpGyQpz7]{Forage}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
-    "WFRP4eEndeavours.Link.Information": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.hBqb1r8DQ0yetQFk]{Gather Information}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
-    "WFRP4eEndeavours.Link.Watch": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yvdhuxcAAkxkklmf]{Keep Watch}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
-    "WFRP4eEndeavours.Link.Map": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.SiADDCab9kI0BAJR]{Map the Route}.",
-    "WFRP4eEndeavours.Link.Practice": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.yRShdcqphDDsrve5]{Practice a Skill}.",
-    "WFRP4eEndeavours.Link.Recuperate": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.pSXKs5wkCogMJist]{Recuperate}.",
-    "WFRP4eEndeavours.Link.Camp": "@UUID[JournalEntry.vEKwalSbtxEvZLxV.JournalEntryPage.2fJCV0zDeqoGZjqq]{Make Camp}.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
+    "WFRP4eEndeavours.Link.Woodcraft": "Woodcraft.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.v17mX07IRnYJa8ju]{Woodcraft}",
+    "WFRP4eEndeavours.Link.Forage": "Forage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forage}",
+    "WFRP4eEndeavours.Link.Information": "Gather Information.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Gather Information}",
+    "WFRP4eEndeavours.Link.Watch": "Keep Watch.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Keep Watch}",
+    "WFRP4eEndeavours.Link.Map": "Map the Route.",
+    "WFRP4eEndeavours.Link.Practice": "Practice a Skill.",
+    "WFRP4eEndeavours.Link.Recuperate": "Recuperate.",
+    "WFRP4eEndeavours.Link.Camp": "Make Camp.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Make Camp}",
     "WFRP4eEndeavours.Link.College": "College Research.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6w5TWRe30xs1PwmX]{College Research}",
     "WFRP4eEndeavours.Link.Patronage": "Patronage.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.Tc4mUAG2DtdfdRaI]{Patronage}",
     "WFRP4eEndeavours.Link.Penance": "Penance.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.LtZXd1AtW9bP0qwq]{Penance}",
@@ -162,9 +162,9 @@
     "WFRP4eEndeavours.Title.Expert": " - Find an Expert",
     "WFRP4eEndeavours.Title.DissentCharm": " - Foment Dissent (Charm)",
     "WFRP4eEndeavours.Title.DissentGossip": " - Foment Dissent (Gossip)",
-	"WFRP4eEndeavours.Title.Combat": " - Combat Training",
+    "WFRP4eEndeavours.Title.Combat": " - Combat Training",
     "WFRP4eEndeavours.Title.News": " - The Latest News",
-	"WFRP4eEndeavours.Title.Research": " - Research Lore",
+    "WFRP4eEndeavours.Title.Research": " - Research Lore",
     "WFRP4eEndeavours.Title.Mark": " - Study a Mark",
     "WFRP4eEndeavours.Title.Woodcraft": " - Woodcraft",
     "WFRP4eEndeavours.Title.Forage": " - Forage",
@@ -175,14 +175,14 @@
     "WFRP4eEndeavours.Title.College": " - College Research",
     "WFRP4eEndeavours.Title.Patronage": " - Patronage",
     "WFRP4eEndeavours.Title.Penance": " - Penance",
-	"WFRP4eEndeavours.Title.UnusualWeapon": " - Train with Unusual Weapon",
+    "WFRP4eEndeavours.Title.UnusualWeapon": " - Train with Unusual Weapon",
     "WFRP4eEndeavours.Title.MagicItem": " - Test Magic Item",
     "WFRP4eEndeavours.Title.Alcatini": " - Alcatini Method",
     "WFRP4eEndeavours.Title.Punchausen": " - Count Punchausen's Narrative Auction",
     "WFRP4eEndeavours.Title.Fanmaris": " - Fanmaris's Perfect Shot",
-	"WFRP4eEndeavours.Title.Leitdorf": " - The Leitdorf Defence",
+    "WFRP4eEndeavours.Title.Leitdorf": " - The Leitdorf Defence",
     "WFRP4eEndeavours.Title.Job": " - Find a Job",
-	"WFRP4eEndeavours.Title.Job2": " - Do the Job",
+    "WFRP4eEndeavours.Title.Job2": " - Do the Job",
     "WFRP4eEndeavours.Title.Familiar": " - Improve Familiar",
     "WFRP4eEndeavours.Title.Mapmaking": " - Mapmaking",
     "WFRP4eEndeavours.Title.Trade": " - Opportune Trade",
@@ -190,11 +190,11 @@
     "WFRP4eEndeavours.Title.Crew": " - Train Crew",
     "WFRP4eEndeavours.Title.DoubleShifts": " - Double Shifts",
     "WFRP4eEndeavours.Title.Woodcutters": " - Leading Woodcutters",
-	"WFRP4eEndeavours.Title.Entertaining": " - Entertaining",
+    "WFRP4eEndeavours.Title.Entertaining": " - Entertaining",
     "WFRP4eEndeavours.Title.Shelter": " - Find Shelter",
     "WFRP4eEndeavours.Title.ForageforFood": " - Forage for Food",
     "WFRP4eEndeavours.Title.Boat": " - Repair a Boat",
-	"WFRP4eEndeavours.Title.Skaven": " - A Study in Skaven",
+    "WFRP4eEndeavours.Title.Skaven": " - A Study in Skaven",
     "WFRP4eEndeavours.Title.Null": " - Resist Null",
     "WFRP4eEndeavours.Title.Visionaries": " - Rosendorn's Prophecy",
     "WFRP4eEndeavours.Title.Witness": " - Bear Witness",
@@ -203,9 +203,9 @@
     "WFRP4eEndeavours.Failure.Expert": "<p>Still didn't find an expert.</p>",
     "WFRP4eEndeavours.Failure.DissentCharm": "<p>Nobody is convinced by your speech.</p>",
     "WFRP4eEndeavours.Failure.DissentGossip": "<p>You can't find enough information.</p>",
-	"WFRP4eEndeavours.Failure.Combat": "<p>You must train harder.</p>",
+    "WFRP4eEndeavours.Failure.Combat": "<p>You must train harder.</p>",
     "WFRP4eEndeavours.Failure.News": "<p>Nothing of interest this time.</p>",
-	"WFRP4eEndeavours.Failure.Research": "<p>You don't find useful or accurate information.</p>",
+    "WFRP4eEndeavours.Failure.Research": "<p>You don't find useful or accurate information.</p>",
     "WFRP4eEndeavours.Failure.Mark": "<p>You don't find anything useful about your mark.</p>",
     "WFRP4eEndeavours.Failure.Woodcraft": "<p>The poor shelter you create won't save your group from this inclement weather. You'll have to Test for @UUID[JournalEntry.NS3YGlJQxwTggjRX.JournalEntryPage.WCivInLZrqEtZzF4#exposure]{Exposure}.</p>",
     "WFRP4eEndeavours.Failure.Forage": "<p>You search and search, but find nothing.</p>",
@@ -215,14 +215,14 @@
     "WFRP4eEndeavours.Failure.College": "<p>You must study harder.</p>",
     "WFRP4eEndeavours.Failure.Patronage": "<p>You didn't choose a good play to patronize.</p>",
     "WFRP4eEndeavours.Failure.Penance": "<p>Your god isn't happy with your penance. Gain one @Condition[Fatigued] Condition. If fumbled, roll in the @Table[wrath] instead.</p>",
-	"WFRP4eEndeavours.Failure.UnusualWeapon": "<p>You need more training with this weapon.</p>",
+    "WFRP4eEndeavours.Failure.UnusualWeapon": "<p>You need more training with this weapon.</p>",
     "WFRP4eEndeavours.Failure.MagicItem": "<p>Your tests are unfruitful.</p>",
     "WFRP4eEndeavours.Failure.Alcatini": "<p>Your companions don't learn anything from you.</p>",
     "WFRP4eEndeavours.Failure.Punchausen": "<p>Your stories are not so entertaining.</p>",
     "WFRP4eEndeavours.Failure.Fanmaris": "<p>You need more training.</p>",
-	"WFRP4eEndeavours.Failure.Leitdorf": "<p>You couldn't master this technique.</p>",
+    "WFRP4eEndeavours.Failure.Leitdorf": "<p>You couldn't master this technique.</p>",
     "WFRP4eEndeavours.Failure.Job": "<p>Your old associates don't know of a job that can help you.</p>",
-	"WFRP4eEndeavours.Failure.Job2": "<p>You've got the item, but the price may be too high.</p>",
+    "WFRP4eEndeavours.Failure.Job2": "<p>You've got the item, but the price may be too high.</p>",
     "WFRP4eEndeavours.Failure.Familiar": "<p>You aren't able to improve your familiar... yet.</p>",
     "WFRP4eEndeavours.Failure.Mapmaking": "<p>You need to work more on your map.</p>",
     "WFRP4eEndeavours.Failure.Trade": "<p>You thought you had a profitable business at hand... Reality tought otherwise.</p>",
@@ -234,7 +234,7 @@
     "WFRP4eEndeavours.Failure.ForageforFood": "<p>You search and search, but can't find any food.</p>",
     "WFRP4eEndeavours.Failure.WatchLustria": "<p>Everything is trying to kill you... Maybe you are making everything worse?</p>",
     "WFRP4eEndeavours.Failure.Boat": "<p>Your boat needs more repairs.</p>",
-	"WFRP4eEndeavours.Failure.Skaven": "<p>You don't find new or useful information on skaven.</p>",
+    "WFRP4eEndeavours.Failure.Skaven": "<p>You don't find new or useful information on skaven.</p>",
     "WFRP4eEndeavours.Failure.Null": "<p>Some of Wilhelm's Null Trait has rubbed off on you.</p>",
     "WFRP4eEndeavours.Failure.Visionaries": "<p>Rosendorn is struck by a terrible revelation about you which she absolutely refuses to share with you.</p>",
     "WFRP4eEndeavours.Failure.Witness": "<p>You don't learn anything new from Ulricsson.</p>",
@@ -243,9 +243,9 @@
     "WFRP4eEndeavours.Success.Expert": "<p>An expert has been located.</p>",
     "WFRP4eEndeavours.Success.DissentCharm": "<p>The crowd is heeding you.</p>",
     "WFRP4eEndeavours.Success.DissentGossip": "<p>You are ready to start talking to the masses.</p>",
-	"WFRP4eEndeavours.Success.Combat": "<p>You may reverse a Test with the associated Skill once during your next adventure.</p>",
+    "WFRP4eEndeavours.Success.Combat": "<p>You may reverse a Test with the associated Skill once during your next adventure.</p>",
     "WFRP4eEndeavours.Success.News": "<p>You hear some interesting rumours.</p>",
-	"WFRP4eEndeavours.Success.Research": "<p>You find useful information.</p>",
+    "WFRP4eEndeavours.Success.Research": "<p>You find useful information.</p>",
     "WFRP4eEndeavours.Success.Mark": "<p>You discover something useful about your mark.</p>",
     "WFRP4eEndeavours.Success.Woodcraft": "<p>You and your companions do not need to Test for Exposure due to inclement weather.</p>",
     "WFRP4eEndeavours.Success.Forage": "<p>You found what you were searching for.</p>",
@@ -256,14 +256,14 @@
     "WFRP4eEndeavours.Success.College": "<p>Studying in the College helps with your magic studies.</p>",
     "WFRP4eEndeavours.Success.Patronage": "<p>You are a good patron of the arts.</p>",
     "WFRP4eEndeavours.Success.Penance": "<p>Your god is moved by your penance. Removed 1 Sin Point, or 2 if you rolled +4 or more SL.</p>",
-	"WFRP4eEndeavours.Success.UnusualWeapon": "<p>You've mastered this weapon.</p>",
+    "WFRP4eEndeavours.Success.UnusualWeapon": "<p>You've mastered this weapon.</p>",
     "WFRP4eEndeavours.Success.MagicItem": "<p>You reveal some of the item's secrets.</p>",
     "WFRP4eEndeavours.Success.Alcatini": "<p>Your shouting, threats, speeches, alcohol and bribery make effect! One or more companions gain or enhance the @UUID[Compendium.wfrp4e-core.items.Item.J9MK0AIaTbvd5oF6]{Drilled} Talent.</p>",
     "WFRP4eEndeavours.Success.Punchausen": "<p>Your stories are printed and you are paid [[2d10]] @UUID[Compendium.wfrp4e-core.items.Item.KB8HgDz56dh2w7w1]{silver shillings}.</p>",
     "WFRP4eEndeavours.Success.Fanmaris": "<p>You're ready for the perfect shot.</p>",
-	"WFRP4eEndeavours.Success.Leitdorf": "<p>You mastered this technique. Will you dare to use it?</p>",
+    "WFRP4eEndeavours.Success.Leitdorf": "<p>You mastered this technique. Will you dare to use it?</p>",
     "WFRP4eEndeavours.Success.Job": "<p>An old associate knows about a suitable job.</p>",
-	"WFRP4eEndeavours.Success.Job2": "<p>The item, but you are not unharmed.</p>",
+    "WFRP4eEndeavours.Success.Job2": "<p>The item, but you are not unharmed.</p>",
     "WFRP4eEndeavours.Success.Familiar": "<p>Your familiar has a chance to improve!</p>",
     "WFRP4eEndeavours.Success.Mapmaking": "<p>You created a beautiful and accurate map.</p>",
     "WFRP4eEndeavours.Success.Trade": "<p>You thought you had a profitable business at hand... and were right!</p>",
@@ -274,32 +274,32 @@
     "WFRP4eEndeavours.Success.Shelter": "<p>You find a place to shelter yourselves.</p>",
     "WFRP4eEndeavours.Success.ForageforFood": "<p>You find food to feed your group.</p>",
     "WFRP4eEndeavours.Success.Boat": "<p>Your boat is in better shape now.</p>",
-	"WFRP4eEndeavours.Success.Skaven": "<p>You find interesting information on skaven.</p>",
+    "WFRP4eEndeavours.Success.Skaven": "<p>You find interesting information on skaven.</p>",
     "WFRP4eEndeavours.Success.Null": "<p>All is going well... for now.</p>",
     "WFRP4eEndeavours.Success.Visionaries": "<p>Rosendorn catches a glimpse of your immediate future.</p>",
     "WFRP4eEndeavours.Success.Witness": "<p>Ulricsson's lessons teach you more about Sigmar's life, but maybe it's heresy?</p>",
 
     "WFRP4eEndeavours.NoSubmit": "You must choose a Skill",
-	"WFRP4eEndeavours.NoSubmitWeapon": "You must choose a Weapon",
-	"WFRP4eEndeavours.Notification.NoTraining": "You can't train animals!",
-	"WFRP4eEndeavours.Notification.NoResearch": "You can't read or write!",
-	"WFRP4eEndeavours.Notification.NoSkill": "You don't have the right skill!",
-	"WFRP4eEndeavours.Notification.NoHeal": "You can't heal!",
-	"WFRP4eEndeavours.Notification.NoWeapon": "You don't have any weapon!",
-	"WFRP4eEndeavours.Notification.NoShip": "You can't maintain ships!",
-	"WFRP4eEndeavours.Notification.NoBoat": "You can't repair boats!",
-	"WFRP4eEndeavours.Animal.ChooseSkill": "Choose a Training Skill.",
-	"WFRP4eEndeavours.Combat.ChooseSkill": "Choose a Training Skill.",
-	"WFRP4eEndeavours.Camp.Choose": "The camp will be used to Heal or Rest?",
-	"WFRP4eEndeavours.UnusualWeapon.ChooseSkill": "Which weapon do you want to master?",
-	"WFRP4eEndeavours.Research.Choose": "Do you want to use your Skill or your Intelligence?",
-	"WFRP4eEndeavours.Research.ChooseSkill": "Choose a skill to research. If you don't choose one you'll use your Intelligence.",
-	"WFRP4eEndeavours.Punchausen.ChooseSkill": "Choose a skill to sell your stories.",
-	"WFRP4eEndeavours.Job2.ChooseSkill": "Choose a Skill for the job.",
-	"WFRP4eEndeavours.Witness.ChooseSkill": "Choose a skill to research.",
-	"WFRP4eEndeavours.Entertaining.ChooseSkill": "Choose a skill for income.",
-	"WFRP4eEndeavours.Ship.ChooseSkill": "Choose a skill to maintain ships.",
-	"WFRP4eEndeavours.Boat.ChooseSkill": "Choose a skill to repair the boat.",
+    "WFRP4eEndeavours.NoSubmitWeapon": "You must choose a Weapon",
+    "WFRP4eEndeavours.Notification.NoTraining": "You can't train animals!",
+    "WFRP4eEndeavours.Notification.NoResearch": "You can't read or write!",
+    "WFRP4eEndeavours.Notification.NoSkill": "You don't have the right skill!",
+    "WFRP4eEndeavours.Notification.NoHeal": "You can't heal!",
+    "WFRP4eEndeavours.Notification.NoWeapon": "You don't have any weapon!",
+    "WFRP4eEndeavours.Notification.NoShip": "You can't maintain ships!",
+    "WFRP4eEndeavours.Notification.NoBoat": "You can't repair boats!",
+    "WFRP4eEndeavours.Animal.ChooseSkill": "Choose a Training Skill.",
+    "WFRP4eEndeavours.Combat.ChooseSkill": "Choose a Training Skill.",
+    "WFRP4eEndeavours.Camp.Choose": "The camp will be used to Heal or Rest?",
+    "WFRP4eEndeavours.UnusualWeapon.ChooseSkill": "Which weapon do you want to master?",
+    "WFRP4eEndeavours.Research.Choose": "Do you want to use your Skill or your Intelligence?",
+    "WFRP4eEndeavours.Research.ChooseSkill": "Choose a skill to research. If you don't choose one you'll use your Intelligence.",
+    "WFRP4eEndeavours.Punchausen.ChooseSkill": "Choose a skill to sell your stories.",
+    "WFRP4eEndeavours.Job2.ChooseSkill": "Choose a Skill for the job.",
+    "WFRP4eEndeavours.Witness.ChooseSkill": "Choose a skill to research.",
+    "WFRP4eEndeavours.Entertaining.ChooseSkill": "Choose a skill for income.",
+    "WFRP4eEndeavours.Ship.ChooseSkill": "Choose a skill to maintain ships.",
+    "WFRP4eEndeavours.Boat.ChooseSkill": "Choose a skill to repair the boat.",
 
     "NAME.EntertainProphecy":"Entertain (Prophecy)",
     "NAME.EntertainStorytelling":"Entertain (Storytelling)",
@@ -307,15 +307,15 @@
     "NAME.TradeCartographer":"Trade (Cartographer)",
     "NAME.TradeBoatbuilder":"Trade (Boatbuilder)",
     "NAME.TradeCarpenter":"Trade (Carpenter)",
-	"NAME.ReadWrite":"Read/Write",
+    "NAME.ReadWrite":"Read/Write",
     "NAME.LoreTheology":"Lore (Theology)",
     "NAME.LoreSigmar":"Lore (Sigmar)",
 
-	"WFRP4eEndeavours.Income.Earned": "You earned ",
-	"WFRP4eEndeavours.Income.Fumble": "You earned nothing at all.",
-	
-	"WFRP4eEndeavours.MoneytoBurn.Title": "Money to Burn",
-	"WFRP4eEndeavours.MoneytoBurn.Hint": "The money of these actors will be burned:<br>{players}</ul>This action can't be undone. Are you sure?",
-	"WFRP4eEndeavours.MoneytoBurn.Chat": "Money burnt from:<b><br>{players}</b>",
-	"WFRP4eEndeavours.MoneytoBurn.Cancel": "Money not burnt"
+    "WFRP4eEndeavours.Income.Earned": "You earned ",
+    "WFRP4eEndeavours.Income.Fumble": "You earned nothing at all.",
+
+    "WFRP4eEndeavours.MoneytoBurn.Title": "Money to Burn",
+    "WFRP4eEndeavours.MoneytoBurn.Hint": "The money of these actors will be burned:<br>{players}</ul>This action can't be undone. Are you sure?",
+    "WFRP4eEndeavours.MoneytoBurn.Chat": "Money burnt from:<b><br>{players}</b>",
+    "WFRP4eEndeavours.MoneytoBurn.Cancel": "Money not burnt"
 }
