--- a/lang/es.json
+++ b/lang/es.json
@@ -117,7 +117,7 @@
     "WFRP4eEndeavours.Link.Forage": "Forrajear.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yaScut9F9BczNQ82]{Forrajear}",
     "WFRP4eEndeavours.Link.Information": "Recopilar informaci\u00F3n.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.6oflBLaejV68Ds4Y]{Recopilar informaci\u00F3n}",
     "WFRP4eEndeavours.Link.Watch": "Montar guardia.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.yQKnn7GB8tZvyisf]{Montar guardia}",
-    "WFRP4eEndeavours.Link.Map": Trazar la ruta.",
+    "WFRP4eEndeavours.Link.Map": "Trazar la ruta.",
     "WFRP4eEndeavours.Link.Practice": "Practicar una habilidad.",
     "WFRP4eEndeavours.Link.Recuperate": "Recuperar.",
     "WFRP4eEndeavours.Link.Camp": "Acampar.</b></h3><p>@UUID[Compendium.wfrp4e-endeavours.wfrp4e-endeavours-items.Item.0uAdenlQr0lK438e]{Acampar}",
